Rewrite App initialization boilerplate

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.AppShell {
+  display: grid;
+  place-items:center;
 }
 
 @media (prefers-reduced-motion: no-preference) {
